# test_defi

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json
src/send_http_get_rust_backend/: Cargo.toml  send_http_get_rust_backend.did
src/send_http_get_rust_backend/src/: lib.rs  tron_address.rs
