[package]
name = "send_http_get_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.9.0"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6.3"
serde = { version = "1.0.197", features = ["derive"] }

hex = "0.4"
sha3 = "0.10.8"
sha2 = "0.10.8"
base58 = "0.2"
k256 = { version = "0.13.3", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }